fix(styles): apply dark mode for code blocks

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -34,7 +34,7 @@
     @apply ml-1 inline-block h-3 w-3 bg-contain bg-center bg-no-repeat;
   }
 
-  .dark .prose a[target="_blank"]::after {
+  html[data-theme="dark"] .prose a[target="_blank"]::after {
     background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='white'%3E%3Cpath d='M6.22 8.72a.75.75 0 0 0 1.06 1.06l5.22-5.22v1.69a.75.75 0 0 0 1.5 0v-3.5a.75.75 0 0 0-.75-.75h-3.5a.75.75 0 0 0 0 1.5h1.69L6.22 8.72Z' /%3E%3Cpath d='M3.5 6.75c0-.69.56-1.25 1.25-1.25H7A.75.75 0 0 0 7 4H4.75A2.75 2.75 0 0 0 2 6.75v4.5A2.75 2.75 0 0 0 4.75 14h4.5A2.75 2.75 0 0 0 12 11.25V9a.75.75 0 0 0-1.5 0v2.25c0 .69-.56 1.25-1.25 1.25h-4.5c-.69 0-1.25-.56-1.25-1.25v-4.5Z' /%3E%3C/svg%3E");
   }
 
@@ -54,8 +54,8 @@
     }
   }
 
-  html.dark .astro-code,
-  html.dark .astro-code span {
+  html[data-theme="dark"] .astro-code,
+  html[data-theme="dark"] .astro-code span {
     color: var(--shiki-dark) !important;
     background-color: var(--shiki-dark-bg) !important;
     font-style: var(--shiki-dark-font-style) !important;
